<resources>
    <string name="warning">Warning</string>
    <string name="token_hint">Put your telegram bot token here!</string>
    <string name="stop_service">Stop service</string>
    <string name="start_service">Start service</string>
    <string name="alarm_shake">Alarm! Shake detected!</string>
    <string name="access_granted">Access granted to you!</string>
    <string name="please_select_command">Please, select command:\n</string>
    <string name="enter_correct_password">Please enter correct password!</string>
    <string name="user_id_granted_access">granted access</string>
    <string name="error_no_bot_token">Please configure bot token!</string>
    <string name="error_bot_token">Wrong bot token! Please, check it</string>
    <string name="error_internet_trouble">Internet connection trouble!</string>
    <string name="how_help">How???</string>
    <string name="help_greetings">Hi! I am Telephoto! I can convert your old smartphone to security alarm!</string>
    <string name="how_to_use">*** HOW TO USE ***</string>
    <string name="help_step_1">1. Open your Telegram</string>
    <string name="help_step_2">2. Search <a href="https://telegram.me/botfather">@BotFather</a>, choose it and press Start</string>
    <string name="help_step_3">3. Send \'/newbot\' to @BotFather to create new bot</string>
    <string name="help_step_4">4. Think of your bot name (for example \'My home bot\')</string>
    <string name="help_step_5">5. Think of your bot unique username (ending with \'bot\' and without spaces, for example MyHomeBot).</string>
    <string name="help_step_6">6. Bot father answers you with a message, that conatins key (token) of your bot. Copy this key (or whole message).</string>
    <string name="help_step_7">7. Go to Telephoto application and paste copied key into \'token\' field.</string>
    <string name="help_step_final">That is all. Now you can start service or check \'Autorun\' option.</string>
    <string name="help_step_final_2">When server running, you can write to your bot via Telegram application. You can find it by name from ste[ 5 (for example, @MyHomeBot).</string>
    <string name="help_i_understood">I understood</string>
    <string name="help_contacts">With all your questions and suggestions please contacts us in out group: <a href="https://telegram.me/telephoto_me">@Telephoto_me</a></string>
    <string name="motion_detector_started">Motion detection started!</string>
    <string name="notifications_status">"\nNotifications: "</string>
    <string name="camera_mode_status">"\nCamera mode: "</string>
    <string name="periodic_photo_status">"\nPeriodic sending photos: "</string>
    <string name="time_period_status">" (time period: %d minutes)"</string>
    <string name="md_status">"\nMotion detection: "</string>
    <string name="sensitivity_status">" (sensitivity: %s)"</string>
    <string name="shake_status">"\nShake sensor: "</string>
    <string name="temperature_status">"Temperature: "</string>
    <string name="register_user_status">"\n\nRegistered users: "</string>
    <string name="build_version_status">"\n\nBuild version: "</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="battery_status" formatted="false">\nBattery: level %s%%, status \'%s\'</string>
    <string name="battery_low">Attention! Battery LOW!</string>
    <string name="power_disconnected">Attention! Powered off! Battery discharging…</string>
    <string name="power_connected">Powered on. Battery charging…</string>
    <string name="battery_discharging">Attention! Powered on, but battery discharging!</string>
    <string name="unknown">unknown</string>
    <string name="discharging">discharging</string>
    <string name="charging">charging (%s)</string>
    <string name="motion_detected">Motion detected!</string>
    <string name="motion_detected_rare">Warning! Motion detected for the first time in a long period!</string>
    <string name="cmd_motion_detector_comment">Motion detector configuration (on/off/auto)</string>
    <string name="start_audio_record">Start audio record. Please, wait %d seconds…</string>
    <string name="audio_record_interrupt">Audio recording is interrupted!</string>
    <string name="bot_started">Bot started!</string>
    <string name="user_audio_record">start audio record</string>
    <string name="user_gps_location">got GPS location</string>
    <string name="shake_sensor_start">Shake sensor started!</string>
    <string name="user_start_shake_sensor">started shake sensor</string>
    <string name="shake_sensor_stop">Shake sensor stopped!</string>
    <string name="user_shake_sensor_stop">stopped shake sensor</string>
    <string name="switch_shake_sensor">Switch shake sensor to:</string>
    <string name="turn_on_notifications">Please, turn on notifications first!</string>
    <string name="no_implementation_command">There is no implementation of command!</string>
    <string name="incoming_call" formatted="false">Incoming call: %s (%s)</string>
    <string name="incoming_messages">Incoming messages:\n</string>
    <string name="user_md_started">started motion detection</string>
    <string name="md_stopped">Motion detection stopped!</string>
    <string name="user_md_stopped">stopped motion detection</string>
    <string name="notification_on">Notifications switch ON!</string>
    <string name="notification_already_on">Notifications already ON!</string>
    <string name="notification_off">Notifications switch OFF!</string>
    <string name="notification_already_off">Notifications already OFF!</string>
    <string name="switch_notification">Switch notifications to:</string>
    <string name="get_photo">took photo</string>
    <string name="camera_init_error">Camera initialization error! :( Please once more time!</string>
    <string name="camera_busy">Camera is busy! Try another time!</string>
    <string name="shake_sensitivity_change">"Sensitivity of shake sensor was successful changed to "</string>
    <string name="user_switch_shake_sensitivity">"switch sensitivity of shake sensor to "</string>
    <string name="select_sensitivity">Select new sensitivity mode:</string>
    <string name="md_sensitivity_change">"Sensitivity of motion detection was successful changed to "</string>
    <string name="user_switch_md_sensitivity">"switch sensitivity of motion detection to "</string>
    <string name="help_support_group">Write your question or suggestion to our support group @telephoto_me</string>
    <string name="camera_mode_changed">"Camera mode was successful changed to "</string>
    <string name="user_changed_camera_mode">"changed camera mode to "</string>
    <string name="select_camera_mode">Select new camera mode:</string>
    <string name="time_period_changed">Time period was successful changed to %s minutes</string>
    <string name="user_change_time_period">changed time period to %s minutes</string>
    <string name="select_minutes">Select new minutes value or type yourself:</string>
    <string name="buy_thank_you">Thank you for using Telephoto!</string>
    <string name="buy_step_1">You can support developers by buying pro-version.</string>
    <string name="buy_step_2">Pro-version functionality:</string>
    <string name="bye_step_3">- images in HD\n- choose camera for motion detection</string>
    <string name="bye_step_4"></string>
    <string name="buy_button_buy">Buy ($2.49)</string>
    <string name="buy_button_rate">Rate 5 stars</string>
    <string name="buy_button_cancel">Cancel</string>
    <string name="button_pro_version">Upgrade to Pro version</string>
    <string name="buy_no_payment_service">Payment service is unavailable!\nTo use Pro version, please install this application from Google Play.</string>
    <string name="loading_payments">Loading payments data…</string>
    <string name="camera_settings_choose">\nChoose camera that you want to configure</string>
    <string name="camera_settings_what_command">What property do you want to change?</string>
    <string name="camera_settings_selected_size">"Selected resolution: "</string>
    <string name="camera_settings_incorrect_size">Incorrect resolution!</string>
    <string name="camera_settings_error">Camera settings error.</string>
    <string name="camera_settings_choose_resolution">Choose image resolution: </string>
    <string name="camera_settings_not_supported">Sorry, but this option is not supported now.</string>
    <string name="camera_not_supported">Camera not supported</string>
    <string name="buy_thank_you_for_bought">Thank you! Now you have a Pro- version!</string>
    <string name="md_not_start">Motion detection did not started, because camera is not available!</string>
    <string name="operation_cancel">Operation cancelled</string>
    <string name="settings_selected_wb">"Selected white balance: "</string>
    <string name="camera_settings_selected_flash">"Selected flash mode: "</string>
    <string name="flash_on_front_camera">Flash could not be ON on FRONT camera!</string>
    <string name="resolution" formatted="false">\nResolution: %d x %d</string>
    <string name="flash_mode">"\nFlash mode: "</string>
    <string name="white_balance">"\nWhite balance: "</string>
    <string name="settings_camera">Settings of cameras</string>
    <string name="bot_running">Bot running…</string>
    <string name="last_date_location">"Last date of location: "</string>
    <string name="tries_get_access">" tries to get access, using wrong password"</string>
    <string name="error_to_all_camera_hangs">Camera hang detected! Restarting service...</string>
    <string name="pro_step_1">You can upgrade your application to a pro version.\n</string>
    <string name="pro_step_2">The best way is to do it via Google play.</string>
    <string name="pro_step_3">If you can\'t use Google play, you can also contact us with @Telephoto_me group in Telegram.</string>
    <string name="pro_step_4">We can help you to upgrade bot to pro version remotely.\n</string>
    <string name="only_pro">Sorry, but this function only available in Pro- version.</string>
    <string name="bot_creation_server_error">Sorry, server error! Please try again or create bot by yourself.</string>
    <string name="create_new_bot">Create new bot</string>
    <string name="set_bot_token">Set bot token</string>
</resources>
