<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/help_greetings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/how_to_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/help_step_1"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/helpViewStep2"
                android:text="@string/help_step_2"
                android:autoLink="web"
                android:onClick="onStep2HelpClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@drawable/help1"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/help_step_3"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/help_step_4"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/help_step_5"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/help_step_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@drawable/help2"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/help_step_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@drawable/help3"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/help_step_final"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/help_step_final_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@drawable/help4"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/help_contacts"
                android:layout_marginBottom="5dp"
                android:autoLink="web"
                android:onClick="onHelpContactsClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="okButtonClick"
                android:text="@string/help_i_understood"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>